# plm-dashboard

./: .gitignore
backend/: .env  alembic.ini  analyze_db.py  clear_part.py  list_tables.py  migrate_split_tables.py  pyproject.toml  vacuum_db.py  verify_new_schema.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_history_current.py  dac1f9eb0e15_initial.py
backend/src/: app_factory.py  categorize.py  config.py  exceptions.py  logger.py  main.py  middleware.py  plm_client.py  scheduler.py  scraper.py  storage.py
backend/src/api/: routes.py
backend/src/models/: __init__.py  base.py  conversion_current.py  conversion_history.py  document_current.py  document_history.py  part_current.py  part_history.py  scrape_current.py  scrape_history.py  scrape_log.py  scrape_record.py
backend/src/notifications/: dingtalk.py  teams.py
backend/tests/: test_api.py  test_config.py  test_exceptions.py  test_logger.py  test_models.py  test_notifications.py  test_placeholder.py  test_plm_client.py  test_scheduler.py  test_scraper.py  test_storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  icons.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DataTable.tsx  Layout.tsx  ProcessingTimeChart.tsx  StatCard.tsx  StatusBadge.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: ConversionPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  LogsPage.tsx  PartsPage.tsx  RecordsPage.tsx  SchedulerPage.tsx  ScraperPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
(+3 files in other folders)
